Ignore unsolved problems.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
 sample.py
 atcoder/
 .atcoderimport/
+
+# unsolved problems
+# ABC_392
+ABC_392/E.py
+ABC_392/F.py
+# ABC_403
+ABC_403/D.py
+# ABC_404
+ABC_404/ABC404_C.py
+ABC_404/ABC404_D.py
+# ABC_405
+ABC_405/ABC405_E.py
+ABC_405/ABC405_G.py
