Reverted devcontainer recipe to reduce the image size.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,20 +1,34 @@
 # syntax=docker/dockerfile:1.4
 FROM ubuntu:latest
 
+ENV LANG=ja_JP.UTF-8
+#ENV LC_ALL=ja_JP.UTF-8
+#ENV LC_CTYPE=ja_JP.UTF-8
+
 ARG USERNAME=vscode
 ARG UID=10000
 ARG GID=$UID
 
-ENV LANG=ja_JP.UTF-8
-
-# Remove users and create new user before installing packages
-# because new users may created by installing package.
-RUN for i in $(awk -F: '$3 >= 1000 && $3 <= 60000 { print $1 }' /etc/passwd); \
-    do userdel $i; done; \
-    for i in $(awk -F: '$3 >= 1000 && $3 <= 60000 { print $1 }' /etc/passwd); \
-    do groupdel $i; done; \
+# Remove user if already exist and create new user.
+RUN set -eux; \
+    if getent passwd "${UID}" > /dev/null; then \
+        echo "UID ${UID} already exists. Deleting..."; \
+        userdel -f $(getent passwd "${UID}" | cut -d: -f1) || true; \
+    fi; \
+    if getent group "${GID}" > /dev/null; then \
+        echo "GID ${GID} already exists. Deleting..."; \
+        groupdel $(getent group "${GID}" | cut -d: -f1) || true; \
+    fi; \
     groupadd --gid "${GID}" "${USERNAME}"; \
     useradd --uid "${UID}" --gid "${GID}" -s /bin/bash -m "${USERNAME}"
+
+# enable sudo
+RUN apt-get update \
+    && apt-get install -y sudo \
+    && apt-get clean \
+    && rm -rf /var/lib/apt-get/lists/* \
+    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
+    && chmod 0440 /etc/sudoers.d/$USERNAME
 
 # install packages
 ENV DEBIAN_FRONTEND=noninteractive
@@ -41,17 +55,9 @@ EOF
 
 RUN apt-get update \
     && apt-get install --no-install-recommends -y \
-    firefox dbus-x11 fonts-noto-cjk \
     git ssh \
-    python3 python3-dev python3-venv python-is-python3
-
-# enable sudo
-RUN apt-get update \
-    && apt-get install --no-install-recommends -y sudo \
-    && apt-get clean \
-    && rm -rf /var/lib/apt-get/lists/* \
-    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
-    && chmod 0440 /etc/sudoers.d/$USERNAME
+    python3 python3-dev python3-venv python-is-python3 \
+    firefox dbus-x11 fonts-noto-cjk
 
 COPY .devcontainer/start.sh /usr/local/bin/start.sh
 RUN chmod +x /usr/local/bin/start.sh
