--- a/.devcontainer/compose.yaml
+++ b/.devcontainer/compose.yaml
@@ -3,6 +3,9 @@ services:
     build:
       context: ..
       dockerfile: .devcontainer/Dockerfile
+      args:
+        UID: ${UID:-1000}
+        GID: ${GID:-1000}
     volumes:
       - ..:/workspaces
       - /tmp/.X11-unix:/tmp/.X11-unix
