Added extension to review Markdown documents.

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -32,7 +32,8 @@
         // ms-python.python install Pylance and Python Debugger
         "ms-python.python",
         // "kevinrose.vsc-python-indent",
-        "esbenp.prettier-vscode"
+        "esbenp.prettier-vscode",
+        "shd101wyy.markdown-preview-enhanced"
       ]
     }
   }
