--- a/ABC440/.gitignore
+++ b/ABC440/.gitignore
@@ -68,8 +68,8 @@ __pycache__/
 !tests/test_a.py
 !B.py
 !tests/test_b.py
-# !C.py
-# !tests/test_c.py
+!C.py
+!tests/test_c.py
 # !D.py
 # !tests/test_d.py
 # !E.py
