--- a/ABC441/.gitignore
+++ b/ABC441/.gitignore
@@ -44,8 +44,8 @@ src/test/java/abc441/*Test.java
 # !src/test/java/abc441/BTest.java
 # !src/main/java/abc441/C.java
 # !src/test/java/abc441/CTest.java
-# !src/main/java/abc441/D.java
-# !src/test/java/abc441/DTest.java
+!src/main/java/abc441/D.java
+!src/test/java/abc441/DTest.java
 # !src/main/java/abc441/E.java
 # !src/test/java/abc441/ETest.java
 # !src/main/java/abc441/F.java
