Replaced dev container base.

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,84 +1,60 @@
 # syntax=docker/dockerfile:1
+# enable here documents.
+# RUN cat <<EOF >> /home/vscode/.bashrc
+#
+# EOF
+
 FROM ubuntu:latest
 # suppress clear apt cache
 RUN rm -f /etc/apt/apt.conf.d/docker-clean; echo 'Binary::apt::APT::Keep-Downloaded-Packages "true";' > /etc/apt/apt.conf.d/keep-cache
 
-# install packages
+# Install packages
 ENV DEBIAN_FRONTEND=noninteractive
 
+# Set locale and timezone
 ENV LANG=ja_JP.UTF-8
-#ENV LC_ALL=ja_JP.UTF-8
-#ENV LC_CTYPE=ja_JP.UTF-8
+ENV LC_ALL=ja_JP.UTF-8
+ENV LC_CTYPE=ja_JP.UTF-8
+ENV TZ=Asia/Tokyo
 
 ARG USERNAME=vscode
 ARG UID=10000
 ARG GID=$UID
 
-# Remove user if already exist and create new user.
+# Setup user and group id
+# Remove all general users and create a new user for USER direction.
 RUN set -eux; \
-    if getent passwd "${UID}" > /dev/null; then \
-    echo "UID ${UID} already exists. Deleting..."; \
-    userdel -f $(getent passwd "${UID}" | cut -d: -f1) || true; \
-    fi; \
-    if getent group "${GID}" > /dev/null; then \
-    echo "GID ${GID} already exists. Deleting..."; \
-    groupdel $(getent group "${GID}" | cut -d: -f1) || true; \
-    fi; \
+    for i in $(awk -F: '$3 >= 1000 && $3 <= 60000 { print $1 }' /etc/passwd); do \
+    userdel $i; \
+    done; \
+    for i in $(awk -F: '$3 >= 1000 && $3 <= 60000 { print $1 }' /etc/passwd); do \
+    groupdel $i; \
+    done; \
     rm -rf /home/*; \
     groupadd --gid "${GID}" "${USERNAME}"; \
     useradd --uid "${UID}" --gid "${GID}" -s /bin/bash -m "${USERNAME}"
 
-# enable sudo
-RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
-    --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    apt-get update \
-    && apt-get install -y sudo \
-    && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
-    && chmod 0440 /etc/sudoers.d/$USERNAME
+# Enable sudo
+# RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
+#     --mount=type=cache,target=/var/lib/apt,sharing=locked \
+#     apt-get update \
+#     && apt-get install -y sudo \
+#     && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
+#     && chmod 0440 /etc/sudoers.d/$USERNAME
 
-# APT Firefox
-# Fixed to install from not snap but apt
-# https://linux-jp.org/?p=5455
-
-RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
-    --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    apt-get update \
-    && apt-get install --no-install-recommends -y \
-    software-properties-common \
-    && add-apt-repository -y ppa:mozillateam/ppa
-
-# set up choose apt over snap
-RUN cat <<EOF > /etc/apt/preferences.d/mozilla-firefox
-Package: *
-Pin: release o=LP-PPA-mozillateam
-Pin-Priority: 1001
-
-Package: firefox
-Pin: version 1:1snap1-0ubuntu2
-Pin-Priority: -1
-EOF
-
-RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
-    --mount=type=cache,target=/var/lib/apt,sharing=locked \
-    apt-get update \
-    && apt-get install --no-install-recommends -y \
-    git ssh \
-    python3 python3-dev python3-venv python-is-python3 \
-    firefox dbus-x11 fonts-noto-cjk
-
-# COPY .devcontainer/init-docker-container.sh /usr/local/bin/init-docker-container.sh
-# RUN chmod +x /usr/local/bin/init-docker-container.sh
-
-# Minial Java
+# https://github.com/moby/buildkit/issues/1662#issuecomment-683962222
+# https://docs.docker.com/reference/dockerfile/?__readwiseLocation=#example-cache-apt-packages
 RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     --mount=type=cache,target=/var/lib/apt,sharing=locked \
     apt-get update \
     && apt-get install --no-install-recommends -y \
     # Basic tools
     # ssh is required to handle GitHub in the container
-    # git ssh \
+    git ssh \
+    # install python
+    python3 python3-venv python-is-python3 \
+    # install java
     default-jdk-headless \
-    # default-jdk \
     # required to install sdkman and gradle
     # Both zip and unzip are required to install.
     curl unzip zip \
@@ -91,15 +67,15 @@ RUN --mount=type=cache,target=/var/cache/apt,sharing=locked \
     && ln -fs /usr/share/zoneinfo/Asia/Tokyo /etc/localtime \
     && dpkg-reconfigure -f noninteractive tzdata
 
-
-# change user. Exec as vscode after this directive.
+# Default user
 USER vscode
 
+# install library
 COPY requirements.txt .
 ARG PIP_CACHE_DIR=/home/vscode/.cache/pip
 RUN mkdir -p $PIP_CACHE_DIR
 RUN --mount=type=cache,target=/home/vscode/.cache/pip,sharing=locked  \
-    sudo chown vscode:vscode /home/vscode/.cache/pip \
+    chown vscode:vscode /home/vscode/.cache/pip \
     && python3 -m venv $HOME/venv \
     && $HOME/venv/bin/pip install --upgrade pip \
     && $HOME/venv/bin/pip install -r requirements.txt
