--- a/requirements.txt
+++ b/requirements.txt
@@ -1,24 +1,4 @@
-attrs
 beautifulsoup4
-certifi
-charset-normalizer
-h11
-idna
-Jinja2
-MarkupSafe
-outcome
-packaging
-PySocks
-python-dotenv
 requests
-selenium
-sniffio
-sortedcontainers
-soupsieve
-trio
-trio-websocket
-typing_extensions
-urllib3
-webdriver-manager
-websocket-client
-wsproto
+Jinja2
+pytest
