--- a/ABC422/.gitignore
+++ b/ABC422/.gitignore
@@ -50,3 +50,29 @@ src/test/java/abc422/*Test.java
 # !src/test/java/abc422/ETest.java
 # !src/main/java/abc422/F.java
 # !src/test/java/abc422/FTest.java
+
+# <<< gitignore:python >>>
+# =========================
+# Generated Python sources
+# （setup-python.py が自動生成）
+# =========================
+*.py
+tests/*.py
+# pytest.ini
+__pycache__/
+.pytest_cache/
+*.pyc
+
+# --- Python ---
+# !A.py
+# !tests/test_a.py
+# !B.py
+# !tests/test_b.py
+!C.py
+!tests/test_c.py
+# !D.py
+# !tests/test_d.py
+# !E.py
+# !tests/test_e.py
+# !F.py
+# !tests/test_f.py
